configs/ingress-nginx/templates/allow-to-backends.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ingress-controllers-to-backends"
spec:
  endpointSelector: {} # All pods are rechable by ingress-controller
  ingress:
  # ports between ingress-nginx and backends could be anything!
   - fromEndpoints:
      - matchLabels:
          app.kubernetes.io/name: ingress-nginx
          io.kubernetes.pod.namespace: ingress-nginx
